// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to CJS codes 1`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "cjs",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "foo.mjs",
    "sourcemap": false,
    "sourcesContent": true,
    "target": "es2015",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to CJS codes 2`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "cjs",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "node_modules/foo.js",
    "sourcemap": false,
    "sourcesContent": true,
    "target": "es2015",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to CJS codes 3`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "cjs",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "foo.mjs",
    "sourcemap": true,
    "sourcesContent": true,
    "target": "es2016",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to CJS codes 4`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "cjs",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "node_modules/foo.js",
    "sourcemap": true,
    "sourcesContent": true,
    "target": "es2016",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to CJS codes 5`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "cjs",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "foo.mjs",
    "sourcemap": true,
    "sourcesContent": true,
    "target": "es2015",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to CJS codes 6`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "cjs",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "node_modules/foo.js",
    "sourcemap": true,
    "sourcesContent": true,
    "target": "es2015",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to ESM codes 1`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "esm",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "foo.mjs",
    "sourcemap": false,
    "sourcesContent": true,
    "target": "es2015",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to ESM codes 2`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "esm",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "node_modules/foo.js",
    "sourcemap": false,
    "sourcesContent": true,
    "target": "es2015",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to ESM codes 3`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "esm",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "foo.mjs",
    "sourcemap": true,
    "sourcesContent": true,
    "target": "es2016",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to ESM codes 4`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "esm",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "node_modules/foo.js",
    "sourcemap": true,
    "sourcesContent": true,
    "target": "es2016",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to ESM codes 5`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "esm",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "foo.mjs",
    "sourcemap": true,
    "sourcesContent": true,
    "target": "es2015",
  },
]
`;

exports[`NgJestTransformer should use esbuild to process mjs or \`node_modules\` js files to ESM codes 6`] = `
[
  "
      const pi = parseFloat(3.124);
      
      export { pi };
    ",
  {
    "format": "esm",
    "loader": "js",
    "sourceRoot": undefined,
    "sourcefile": "node_modules/foo.js",
    "sourcemap": true,
    "sourcesContent": true,
    "target": "es2015",
  },
]
`;
